# promptguard

./: .dockerignore  .env.example  .gitignore  ADK_WEB_SETUP.md  ARCHITECTURE.md  DOCUMENTATION.md  ENV_SETUP.md  LM_STUDIO_SETUP.md  MIGRATION_GUIDE.md  Makefile  PRD.md  QUICK_FIX.md  README.md  README_API.md  README_PROMPTGUARD.md  adk.txt  docker-compose.yml  policy.example.yaml  probes.example.yaml  promptshield.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  __init__.py  main.py  models.py  requirements.txt  tasks.py
api/routers/: config.py  scans.py  test_api.py
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  index.css  index.tsx
frontend/src/api/: client.ts  config.ts  scans.ts  testApi.ts
frontend/src/store/: scanStore.ts
frontend/src/types/: index.ts
promptguard_agent/: .env.example  ADK_LM_STUDIO_FIX.md  API_KEY_FIX.md  EXPECTED_BEHAVIOR.md  WHY_GOOGLE_LLM.md  __init__.py  agent.py  litellm_adapter.py  lm_studio_model.py  load_env.py
src/promptguard/: __init__.py  cli.py  models.py  reports.py  runner.py
src/promptguard/adapters/: __init__.py  legacy.py  probe_registry.py
src/promptguard/agent/: __init__.py  security_agent.py  tools.py
src/promptguard/attack_graphs/: __init__.py  executor.py
src/promptguard/policy/: __init__.py  engine.py  loader.py
src/promptshield/: cli.py  config.py  models.py  reports.py  runner.py  scoring.py  utils.py
tests/: test_smoke.py
(+23 files in other folders)
